# EggplantsBuffer

./: CMakeLists.txt  Readme.md
3rdParts/: articles.fbs  articles.proto3  articles.proto3.pb.cc  articles.proto3.pb.h  articles_generated.h  iris.fbs  iris.proto3  iris.proto3.pb.h  iris_generated.h  tyl.fbs  tyl.proto3  tyl.proto3.pb.cc  tyl.proto3.pb.h  yww_generated.h  zxh.fbs
include/: MyTest.h  SerializeFamily.h  datastruct.h  tyl_generated copy.h
src/: MyTest.cpp  SerializeFamily.cpp  datastruct.cpp  iris.proto3.pb.cc  main.cpp
